force-app/main/default/objects/PWChrono_Work_Log__c/PWChrono_Work_Log__c.object-meta.xml
<CustomObject>
    <description
  >Persistent work records for WFH, overtime, and timesheet experiences.</description>
    <label>PWChrono Work Log</label>
    <nameField>
        <displayFormat>WL-{000000}</displayFormat>
        <label>Work Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PWChrono Work Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>