force-app/main/default/objects/PWChrono_Work_Log__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName><deleteConstraint
  >SetNull</deleteConstraint><label>Approver</label><referenceTo
  >Portal_Users__c</referenceTo>
    <relationshipLabel>Work Logs to Approve</relationshipLabel><relationshipName
  >Work_Logs_To_Approve</relationshipName><required>false</required><type
  >Lookup</type>
</CustomField>