force-app/main/default/objects/PWChrono_Work_Log__c/fields/Decision_Comments__c.field-meta.xml
<CustomField><fullName
  >Decision_Comments__c</fullName><label>Decision Comments</label><length
  >32768</length><required>false</required><type
  >LongTextArea</type><visibleLines>3</visibleLines></CustomField>