force-app/main/default/objects/PWChrono_Work_Log__c/fields/Decision_Date__c.field-meta.xml
<CustomField><fullName
  >Decision_Date__c</fullName><label>Decision Date</label><required
  >false</required><type>DateTime</type></CustomField>