force-app/main/default/objects/PWChrono_Work_Log__c/fields/Description__c.field-meta.xml
<CustomField><fullName
  >Description__c</fullName><label>Description</label><length
  >32768</length><required>false</required><type
  >LongTextArea</type><visibleLines>4</visibleLines></CustomField>