force-app/main/default/objects/PWChrono_Work_Log__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Work Logs</relationshipLabel>
    <relationshipName>Work_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>