force-app/main/default/objects/PWChrono_Work_Log__c/fields/Hours__c.field-meta.xml
<CustomField><fullName
  >Hours__c</fullName><label>Worked Hours</label><precision
  >5</precision><required>false</required><scale>2</scale><type
  >Number</type></CustomField>