force-app/main/default/objects/PWChrono_Work_Log__c/fields/Planned_Hours__c.field-meta.xml
<CustomField><fullName
  >Planned_Hours__c</fullName><label>Planned Hours</label><precision
  >5</precision><required>false</required><scale>2</scale><type
  >Number</type></CustomField>