force-app/main/default/objects/PWChrono_Work_Log__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName><deleteConstraint
  >SetNull</deleteConstraint><label>Project</label>
    <referenceTo>PWChrono_Project__c</referenceTo><relationshipLabel
  >Work Logs</relationshipLabel><relationshipName
  >Work_Logs</relationshipName><required>false</required><type>Lookup</type>
</CustomField>