force-app/main/default/objects/PWChrono_Work_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName><label>Status</label><required
  >true</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted
      >false</sorted>
        <value><fullName>Draft</fullName><default>false</default><label
        >Draft</label></value>
        <value><fullName>Submitted</fullName><default>true</default><label
        >Submitted</label></value>
        <value><fullName>Approved</fullName><default>false</default><label
        >Approved</label></value>
        <value><fullName>Rejected</fullName><default>false</default><label
        >Rejected</label></value>
        <value><fullName>Cancelled</fullName><default>false</default><label
        >Cancelled</label></value>
    </valueSetDefinition></valueSet>
</CustomField>