force-app/main/default/objects/PWChrono_Work_Log__c/fields/Work_Date__c.field-meta.xml
<CustomField><fullName
  >Work_Date__c</fullName><label>Work Date</label><required>true</required><type
  >Date</type></CustomField>