force-app/main/default/objects/PWChrono_Work_Log__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted
      >false</sorted>
        <value><fullName>Work From Home</fullName><default>false</default><label
        >Work From Home</label></value>
        <value><fullName>Overtime</fullName><default>false</default><label
        >Overtime</label></value>
        <value><fullName>Timesheet</fullName><default>false</default><label
        >Timesheet</label></value>
    </valueSetDefinition></valueSet>
</CustomField>